--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,6 @@
   "rules": {
     "@next/next/no-img-element": "off",
     "@typescript-eslint/no-require-imports": "off"
-  }
+  },
+  "ignorePatterns": ["/src/components/ui/*"]
 }
